terraform_code/BALA/V1-EC2.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "demo" {
  ami = "ami-051f7e7f6c2f40dc1"
  instance_type = "t2.micro"
  key_name = "dpp"
}
